# python_monad

./: .gitignore  README.md  pyproject.toml
src/python_monad/: __init__.py  dict_tree.py  indexable.py
src/python_monad/monad/: __init__.py  maybe.py  monad_base.py  state_monad.py  types.py
