[project]
name = "python_monad"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Michael Haynes", email = "antihaynes@gmail.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
